--- a/src/app/components/rating/rating.component.scss
+++ b/src/app/components/rating/rating.component.scss
@@ -39,6 +39,7 @@
         }
         .item-info{
           padding:0px !important;
+          margin-right:35px;
         }
     }
     .btn-rating{
