--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,6 +10,7 @@
   --ion-color-primary-contrast-rgb: 255,255,255;
   --ion-color-primary-shade: #c4425c;
   --ion-color-primary-tint: #e25d77;
+  --ion-background-color:white;
 
   /** secondary **/
   --ion-color-secondary: #0cd1e8;
