--- a/src/app/components/list-wine/list-wine.component.scss
+++ b/src/app/components/list-wine/list-wine.component.scss
@@ -6,13 +6,11 @@
     text-align: center;
     align-content: center;
     height:100%;
-    min-width:100px;
     display: flex;
     flex-direction: column;
-    width: 100% !important;
-    margin: 0 !important;
     padding-top:20px;
-    box-shadow: inset 0px 11px 10px -15px black, outset 0px -11px 10px -15px black;
+    padding-right:10px;
+    box-shadow: inset 0px 8px 10px -15px black, outset 0px -8px 10px -15px black;
     cursor: pointer;
     .img-vin{
         width:50px;
@@ -21,13 +19,18 @@
         min-height: 190px;
         padding-bottom: 50px;
     }
-    .vin-info{
+    .vin-wrapper{
+        margin-right:20px;
         margin-left:20px;
-        padding-bottom:50px;
-        .vin-title{
-            font-weight: bold;
-            font-size: calc(15px + .5vw);
-            color: #df4b68;
+        .vin-info{
+            margin-left:20px;
+            padding-bottom:50px;
+            font-size: calc(11px + .5vw);
+            .vin-title{
+                font-weight: bold;
+                font-size: calc(13px + .5vw);
+                color: #df4b68;
+            }
         }
     }
 }
