--- a/src/app/components/list/list.page.scss
+++ b/src/app/components/list/list.page.scss
@@ -2,6 +2,9 @@
     width:100px;
     height:50px;
 }
+.restau-card{
+    cursor: pointer;
+}
 
 .div-icon{
     margin-right:10px;
@@ -14,9 +17,12 @@
     }
 }
 
-.restau-title{
-    font-weight: bold;
-    font-size:1.1em;
-    color: #df4b68;
-    cursor: pointer;
+.restau-info{
+    padding-top:20px;
+    padding-bottom:20px;
+    .restau-title{
+        font-weight: bold;
+        font-size:1.1em;
+        color: #df4b68;
+    }
 }
