--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,15 @@
-<p>
-  login works!
-</p>
+<ion-content class="login-content">
+  <ion-card class="login-card">
+    <ion-img src="/assets/icon/vaudvin_logo.png" class="img-toolbar" slot="center"></ion-img>
+    <div class="div-label">
+      <ion-label class="login-label" color="primary">Bienvenue sur VaudVin !</ion-label>
+    </div>
+    <ion-item class="login-input">
+      <ion-input placeholder="Nom d'utilisateur" [(ngModel)]="username"></ion-input>
+    </ion-item>
+    <ion-item class="login-input">
+      <ion-input type="password" placeholder="Mot de passe" [(ngModel)]="password" (keydown)="login($event)"></ion-input>
+    </ion-item>
+    <ion-button class="login-btn" (click)="login($event)">Login</ion-button>
+  </ion-card>
+</ion-content>
