--- a/src/app/components/restaurant/restaurant.component.html
+++ b/src/app/components/restaurant/restaurant.component.html
@@ -1,8 +1,10 @@
 <ion-content>
-  <ion-icon name="restaurant"></ion-icon>
-  <ion-item> {{restaurant.nom}}</ion-item>
-  <ion-item> {{restaurant.adresse}}</ion-item>
-  <ion-item> {{restaurant.code_postal}} - {{restaurant.ville}} </ion-item>
-  <ion-item> {{restaurant.no_telephone}}</ion-item>
-  <ion-button color="medium">Afficher la carte des vins</ion-button>
+  <div class="restau-wrapper">
+    <ion-icon name="restaurant" class="restau-icon"></ion-icon>
+    <ion-item class="restau-title"> {{restaurant.nom}}</ion-item>
+    <ion-item class="restau-info"> {{restaurant.adresse}}</ion-item>
+    <ion-item class="restau-info"> {{restaurant.code_postal}} - {{restaurant.ville}} </ion-item>
+    <ion-item class="restau-info"> {{restaurant.no_telephone}}</ion-item>
+    <ion-button color="medium" class="btn-carte" (click)="goToWineList()">Afficher la carte des vins</ion-button>
+  </div>
 </ion-content>
