--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -11,6 +11,6 @@
 </ion-header>
 <ion-content>
   <ion-card class="home-card">
-    <ion-label class="home-label" color="primary">Merci d'avoir choisi VaudVin ! <br/><br/>Grâce à cette application, tous vos vins préférés sont accessibles en seulement quelques clics ! ;)</ion-label>
+    <ion-label class="home-label" color="primary">Bonjour {{name}} . Merci d'avoir choisi VaudVin<br/><br/>Grâce à cette application, tous vos vins préférés sont accessibles en seulement quelques clics ! ;)</ion-label>
   </ion-card>
 </ion-content>
