--- a/src/app/components/wine-card/wine-card.component.html
+++ b/src/app/components/wine-card/wine-card.component.html
@@ -1,4 +1,4 @@
-<ion-item lines="none" class="vin-wrapper" (click)="goToDetails(vin)">
+<ion-item lines="none" class="vin-wrapper" (click)="goToDetails()">
   <ion-img class="img-vin" src="data:image/jpeg;base64,{{vin.photo}}"></ion-img>
   <div class="vin-info">
     <ion-label class="vin-title">{{vin.name}}</ion-label>
@@ -6,6 +6,5 @@
     <ion-label>{{vin.producer}}</ion-label>
     <ion-label>{{vin.grape_variety}}</ion-label>
     <ion-label>Vin {{vin.category}}</ion-label>
-    <ion-label>{{vin.vintage}}</ion-label>
   </div>
 </ion-item>
