--- a/src/app/components/wine-card/wine-card.component.scss
+++ b/src/app/components/wine-card/wine-card.component.scss
@@ -6,14 +6,14 @@
     padding-bottom: 50px;
 }
 .vin-wrapper{
-    margin-right:20px;
     .vin-info{
-        margin-left:20px;
+        margin-left:10px;
         padding-bottom:50px;
         font-size: calc(11px + .5vw);
         .vin-title{
             font-weight: bold;
             font-size: calc(13px + .5vw);
+            overflow: visible;
             color: #df4b68;
         }
     }
