--- a/src/app/pages/list-wine/list-wine.page.scss
+++ b/src/app/pages/list-wine/list-wine.page.scss
@@ -19,6 +19,8 @@
     margin-top:-5px;
 }
 
+
+
 .wine-card{
     text-align: center;
     align-content: center;
@@ -31,25 +33,14 @@
     transition: all 500ms ease;
     box-shadow: inset 0px 8px 10px -15px black, outset 0px -8px 10px -15px black;
     cursor: pointer;
-    .img-vin{
-        width:50px;
-        height: 190px;
-        min-width: 50px;
-        min-height: 190px;
-        padding-bottom: 50px;
-    }
-    .vin-wrapper{
-        margin-right:20px;
-        .vin-info{
-            margin-left:20px;
-            padding-bottom:50px;
-            font-size: calc(11px + .5vw);
-            .vin-title{
-                font-weight: bold;
-                font-size: calc(13px + .5vw);
-                color: #df4b68;
-            }
-        }
-    }
 }
+
+.loading-spinner{
+    padding-top:10%;
+    transform: scale(2);
+    text-align: center;
+    display: table;
+    margin: auto;
+    position: relative;
+  }
 
