--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -4,12 +4,18 @@
     <div class="div-label">
       <ion-label class="login-label" color="primary">Bienvenue sur VaudVin !</ion-label>
     </div>
-    <ion-item class="login-input" responsive-sm>
-      <ion-input placeholder="Nom d'utilisateur" [(ngModel)]="username"></ion-input>
-    </ion-item>
-    <ion-item class="login-input" responsive-sm>
-      <ion-input type="password" placeholder="Mot de passe" [(ngModel)]="password" (keydown)="login($event)"></ion-input>
-    </ion-item>
-    <ion-button class="login-btn" (click)="login($event)">Login</ion-button>
+    <form (submit)="login($event)" (keydown)="login($event)">
+      <ion-item class="form-group" responsive-sm>
+        <ion-input type="text" placeholder="Nom d'utilisateur" name="username" [(ngModel)]="credentials.name"></ion-input>
+      </ion-item>
+      <ion-item class="form-group" responsive-sm>
+        <ion-input type="password" placeholder="Mot de passe" name="password" [(ngModel)]="credentials.password">
+        </ion-input>
+      </ion-item>
+      <div class="div-btn">
+        <ion-button class="form-btn" (click)="login($event)">Login</ion-button>
+        <br /><a href="/register" class="register-link">Nouveau ? S'inscrire ici</a>
+      </div>
+    </form>
   </ion-card>
 </ion-content>
