--- a/src/app/pages/wine-detail/wine-detail.page.html
+++ b/src/app/pages/wine-detail/wine-detail.page.html
@@ -1,39 +1,48 @@
 <ion-content overflow-scroll="true">
   <div class="wine-card">
-    <ion-img class="img-vin" src="{{vin.photo}}"></ion-img>
+    <ion-img class="img-vin" src="{{vinPhoto}}"></ion-img>
     <div class="vin-info">
-      <ion-item class="item-info">
-        <ion-label class="vin-title">{{vin.nom}}</ion-label>
+      <ion-item class="item-info" lines="none">
+        <ion-label class="vin-title">{{vin?.name}}</ion-label>
       </ion-item>
-      <ion-item class="item-info">
-        <ion-label>Provenance : {{vin.provenance}}</ion-label>
+      <ion-item class="item-info" lines="none">
+        <ion-label>Provenance : {{vin?.region}}</ion-label>
       </ion-item>
-      <ion-item class="item-info">
-        <ion-label>Producteur : {{vin.producteur}}</ion-label>
+      <ion-item class="item-info" lines="none">
+        <ion-label>Producteur : {{vin?.producer}}</ion-label>
       </ion-item>
-      <ion-item class="item-info">
-        <ion-label>Cépage : {{vin.cepage}}</ion-label>
+      <ion-item class="item-info" lines="none">
+        <ion-label>Cépage : {{vin?.grape_variety}}</ion-label>
       </ion-item>
-      <ion-item class="item-info">
-        <ion-label>Millésime : {{vin.millesime}}</ion-label>
+      <ion-item class="item-info" lines="none">
+        <ion-label>Millésime : {{vin?.vintage}}</ion-label>
       </ion-item>
-      <ion-item class="item-info">
-        <ion-label>Type : {{vin.type}}</ion-label>
+      <ion-item class="item-info" lines="none">
+        <ion-label>Type : {{vin?.category}}</ion-label>
       </ion-item>
-      <ion-item class="item-info">
-        <ion-label>Style : {{vin.style}}</ion-label>
+      <ion-item class="item-info" lines="none">
+        <ion-label>Style : {{vin?.style}}</ion-label>
       </ion-item>
-      <ion-item class="item-info">
-        <ion-label>Degré d'alcool : {{vin.type}}</ion-label>
+      <ion-item class="item-info" lines="none">
+        <ion-label>Accords mets-vins : {{vin?.served_with}}</ion-label>
       </ion-item>
-      <ion-item class="item-info">
-        <ion-label>Taux de sucre : {{vin.taux_de_sucre}}</ion-label>
+      <ion-item class="item-info" lines="none">
+        <ion-label>Taux de sucre : {{vin?.sugar_level}}g</ion-label>
       </ion-item>
-      <ion-item class="item-info">
-        <ion-label>Conservation : {{vin.temperature_service}}</ion-label>
+      <ion-item class="item-info" lines="none">
+        <ion-label>Degré d'alcool : {{vin?.total_acidity}}g/l</ion-label>
       </ion-item>
-      <ion-item class="item-info">
-        <ion-label>Médaille : {{vin.medaille}}</ion-label>
+      <ion-item class="item-info" lines="none">
+        <ion-label>Degré d'alcool : {{vin?.alcohol_level}}%</ion-label>
+      </ion-item>
+      <ion-item class="item-info" lines="none">
+        <ion-label>Est bio : {{isBio}}</ion-label>
+      </ion-item>
+      <ion-item class="item-info" lines="none">
+        <ion-label>Est boisé : {{isWoody}}</ion-label>
+      </ion-item>
+      <ion-item class="item-info" lines="none">
+        <ion-label>Capacité : {{vin?.capacity | number: '1.0-0'}}dl</ion-label>
       </ion-item>
     </div>
     <span> Comment avez-vous trouvé ce vin ?</span>
@@ -54,8 +63,9 @@
       <ion-button color="primary" size="small" (click)="rate()">Envoyer la note</ion-button>
     </div>
     <ion-item class="comment-item" lines="none">
-      <ion-textarea class="comment-ta" placeholder="Laissez un commentaire (100 caractères max.)" maxlength="100"></ion-textarea>
+      <ion-textarea class="comment-ta" placeholder="Laissez un commentaire (100 caractères max.)" maxlength="100">
+      </ion-textarea>
       <ion-button color="primary" size="small" (click)="rate()">Commenter</ion-button>
     </ion-item>
-  </div>      
+  </div>
 </ion-content>
