--- a/src/app/pages/restaurant-card/restaurant-card.page.html
+++ b/src/app/pages/restaurant-card/restaurant-card.page.html
@@ -20,7 +20,7 @@
     </div>
     <ion-card *ngIf="whiteWines?.length > 0">
       <ion-card-header id="1" (click)="toggleAccordion($event)" class="card-header">
-        <ion-label>Vins blancs</ion-label>
+        <ion-label class="card-header">Vins blancs</ion-label>
         <ion-icon class="card-icon" id="icon1" name="md-add"></ion-icon>
       </ion-card-header>
       <ion-card-content id="content1" class="wine-card">
@@ -31,7 +31,7 @@
     </ion-card>
     <ion-card *ngIf="roseWines?.length > 0">
       <ion-card-header id="2" (click)="toggleAccordion($event)" class="card-header">
-        <ion-label>Vins rosés</ion-label>
+        <ion-label class="card-header">Vins rosés</ion-label>
         <ion-icon class="card-icon" id="icon2" name="md-add"></ion-icon>
       </ion-card-header>
       <ion-card-content id="content2" class="wine-card">
@@ -53,7 +53,7 @@
     </ion-card>
     <ion-card *ngIf="mousseuxWines?.length > 0">
       <ion-card-header id="4" (click)="toggleAccordion($event)" class="card-header">
-        <ion-label>Mousseux & spécialités</ion-label>
+        <ion-label class="card-header">Mousseux & spécialités</ion-label>
         <ion-icon class="card-icon" id="icon4" name="md-add"></ion-icon>
       </ion-card-header>
       <ion-card-content id="content4" class="wine-card">
