--- a/src/app/pages/restaurant-card/restaurant-card.page.scss
+++ b/src/app/pages/restaurant-card/restaurant-card.page.scss
@@ -6,7 +6,7 @@
 .card-header {
     background-color: #df4b68;
     color: #FFF;
-    font-size: 2vh;
+    font-size: 1em;
 }
 
 .card-icon {
@@ -32,7 +32,7 @@ h3{
 
 .card-title{
     text-align: center;
-    font-size: calc(0.85em + 1vw);
+    font-size: calc(0.65em + 1vw);
     .label-restaurant{
         white-space:pre-wrap;
         word-break:break-word;
