--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -2,3 +2,12 @@
     width: 100px;
     height: 50px;
 }
+
+.title{
+
+    text-align: center;
+    font-size: calc(0.65em + 1vw);
+    padding:0;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+}
