--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -7,7 +7,7 @@
       <div class="text">
           <ion-label class="home-label" color="primary">Bonjour {{name}} ! Merci d'avoir choisi VaudVin.
               <ion-icon ios="ios-wine" md="md-wine" class="home-icon"></ion-icon>
-              <br />Vous pouvez naviguer sur l'application à l'aide du menu situé en haut à gauche de cette page.
+              <br />Vous pouvez naviguer sur l'application à l'aide du menu situé en haut à gauche.
             </ion-label>
       </div>
       <div class="blur"></div>
