--- a/src/app/pages/choose-vintage/choose-vintage.page.html
+++ b/src/app/pages/choose-vintage/choose-vintage.page.html
@@ -1,6 +1,6 @@
 <ion-content>
   <ion-item class="list-vintage" lines="none">
-    <ion-label>Sélectionnez un millésime</ion-label>
+    <ion-label class="title">Sélectionnez un millésime</ion-label>
     <ion-select [(ngModel)]="selectedYear" (ngModelChange)="goToDetail($event)" cancelText="Annuler" okText="Valider">
       <ion-select-option  *ngFor="let year of listYear">{{year}}</ion-select-option>
     </ion-select>
