--- a/src/app/pages/logout/logout.page.html
+++ b/src/app/pages/logout/logout.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <h3 style="text-align: center; margin:50px">Déconnecté ! Vous allez être redirigé vers l'accueil ...</h3>
+  <h3 class="title">Déconnecté ! Vous allez être redirigé vers l'accueil ...</h3>
   <div *ngIf="isLoading && cpt===0" class="loading-spinner">
     <ion-spinner name="bubbles" color="primary"></ion-spinner>
   </div>
