--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -9,9 +9,13 @@
 }
 
 .invalid-feedback{
-    font-size:0.7em;
+    font-size:2vw;
     color:red;
     left:50px;
+}
+
+ion-input{
+    font-size: 4.4vw;
 }
 
 .form-btn{
