--- a/src/app/pages/wine-detail/wine-detail.page.html
+++ b/src/app/pages/wine-detail/wine-detail.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title class="wine-title">
+    <ion-title class="toolbar-title">
       Fiche du vin
     </ion-title>
   </ion-toolbar>
