--- a/src/app/pages/choose-vintage/choose-vintage.page.scss
+++ b/src/app/pages/choose-vintage/choose-vintage.page.scss
@@ -2,9 +2,8 @@
     border-top:2px solid #df4b68;
     border-bottom:2px solid #df4b68;
     margin-top:40px;
-    font-size:1.2em;
+    font-size:5vw;
     text-align: center;
     left: -5px !important;
     right: -5px !important;
-
 }
