--- a/src/app/pages/wine-detail/wine-detail.page.scss
+++ b/src/app/pages/wine-detail/wine-detail.page.scss
@@ -8,7 +8,7 @@
   }
 }
 
-.wine-title {
+.toolbar-title {
   font-size: calc(20px + .5vw);
   text-align: center;
   font-weight: bold;
@@ -38,6 +38,10 @@
     position: relative;
   }
 
+  h4{
+    font-size: 5vw;
+  }
+
   .vin-info {
     padding-bottom: 30px;
     white-space: pre-wrap;
@@ -53,7 +57,7 @@
       -webkit-hyphens: none;
       -moz-hyphens: none;
       hyphens: none;
-      font-size: calc(25px + .5vw);
+      font-size: 7vw;
     }
 
     .invalid-feedback {
@@ -77,7 +81,7 @@
 
       .label-info {
         font-weight: 500;
-        font-size: 1.2em;
+        font-size: 5vw;
       }
     }
   }
